--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.springframework.security=DEBUG
 
 
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username= correo@gmail.com
+# (usar clave de aplicación)
+spring.mail.password=12we iyure sgjy qwfrr   
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 #spring.security.user.name=mena
 #spring.security.user.password=admin123
